# DeFi-Endogenous-Fragility

./: .gitignore  CITATION.cff  DATA_STATUS.md  DUNE_EXTRACTION_BRIEF.md  Makefile  README.md  RUN_VM.md  config.py  pyproject.toml  requirements-frozen.txt  requirements.txt
.github/workflows/: smoke.yml
data/: CHECKSUMS.sha256  DATA_STATUS.md
data/econ/: block_sensitivity.csv  block_sensitivity_meta.json  btc_placebo_meta.json  btc_placebo_results.csv  btc_vs_eth_profile.csv  descriptive_stats.csv  descriptive_stats.json  descriptive_stats_meta.json  exceedance_meta.json  exceedance_meta_cumulative.json  exceedance_paired.csv  exceedance_paired_cumulative.csv  maker_bound.csv  (+60 more)
docs/: DATA_STATUS.md  DUNE_EXTRACTION_BRIEF.md
dune_queries/: liquidations_6912877.sql
manuscript/: .gitignore  main.tex  preamble.tex  references.bib
notebooks/: 01_02_data_prep_report.ipynb  01_calendar.ipynb  02_diagnostics.ipynb  03_core_panel.ipynb  03_core_panel_report.ipynb  04_defi_merge.ipynb  04_defi_merge_report.ipynb  05_figures.ipynb  07_quantile_lp.ipynb  07_quantile_lp_report.ipynb  08_robustness.ipynb  08_robustness_report.ipynb  09_descriptive_stats.ipynb  10_deconstruction_report.ipynb  11_survivors_report.ipynb
paper/: numbers.tex
scripts/: add_bonferroni.py  run_core_panel.py  run_data_prep.py  run_defi_merge.py  run_quantile_lp.py  run_robustness_all.py
src/: __init__.py  bootstrap.py  estimation.py  io.py
tests/: conftest.py  fingerprints.txt  test_bootstrap.py  test_config.py  test_estimation.py  test_funding_regime.py  test_io.py  test_quantile_lp_smoke.py
(+61 files in other folders)
